--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,12 @@
     "axios": "^1.13.2",
     "firebase": "^12.8.0",
     "framer-motion": "^12.27.5",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^7.12.0"
   }
 }
